--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Expand your creativity with proffessionals"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+
     <link rel="stylesheet" href="boxicons-2.1.1/css/boxicons.css">
     <script src="https://kit.fontawesome.com/8341b376f5.js" crossorigin="anonymous"></script>
     <!--
